delete file added
