# handlers/upload_file_handler.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/mnmonherdene1234/files-gin-go/config"
 	"github.com/mnmonherdene1234/files-gin-go/utils"
 	"net/http"
 	"os"
@@ -20,40 +21,38 @@ import (
 // @Failure 400 {object} map[string]string "No file received"
 // @Failure 500 {object} map[string]string "Failed to create upload directory or Failed to save the file"
 // @Router /upload [post]
-func UploadFileHandler(filesDir string) gin.HandlerFunc {
-	return func(c *gin.Context) {
-		// Allow for very large files (set a very large limit)
-		c.Request.Body = http.MaxBytesReader(c.Writer, c.Request.Body, 1<<63-1) // No limit
+func UploadFileHandler(c *gin.Context) {
+	// Allow for very large files (set a very large limit)
+	c.Request.Body = http.MaxBytesReader(c.Writer, c.Request.Body, 1<<63-1) // No limit
 
-		// Retrieve the uploaded file from the form
-		file, err := c.FormFile("file")
-		if err != nil {
-			utils.ErrorResponse(c, http.StatusBadRequest, "No file received", err)
-			return
-		}
-
-		// Ensure the directory for saving files exists
-		if err := createUploadDir(filesDir); err != nil {
-			utils.ErrorResponse(c, http.StatusInternalServerError, "Failed to create upload directory", err)
-			return
-		}
-
-		// Generate a unique filename to prevent conflicts
-		filename := utils.GenerateUniqueFilename(file.Filename)
-		uploadFilePath := filepath.Join(filesDir, filename)
-
-		// Save the uploaded file
-		if err := c.SaveUploadedFile(file, uploadFilePath); err != nil {
-			utils.ErrorResponse(c, http.StatusInternalServerError, "Failed to save the file", err)
-			return
-		}
-
-		// Respond with success and file information
-		c.JSON(http.StatusOK, gin.H{
-			"message":  "File uploaded successfully",
-			"filename": filename,
-		})
+	// Retrieve the uploaded file from the form
+	file, err := c.FormFile("file")
+	if err != nil {
+		utils.ErrorResponse(c, http.StatusBadRequest, "No file received", err)
+		return
 	}
+
+	// Ensure the directory for saving files exists
+	if err := createUploadDir(config.FilesDir); err != nil {
+		utils.ErrorResponse(c, http.StatusInternalServerError, "Failed to create upload directory", err)
+		return
+	}
+
+	// Generate a unique filename to prevent conflicts
+	filename := utils.GenerateUniqueFilename(file.Filename)
+	uploadFilePath := filepath.Join(config.FilesDir, filename)
+
+	// Save the uploaded file
+	if err := c.SaveUploadedFile(file, uploadFilePath); err != nil {
+		utils.ErrorResponse(c, http.StatusInternalServerError, "Failed to save the file", err)
+		return
+	}
+
+	// Respond with success and file information
+	c.JSON(http.StatusOK, gin.H{
+		"message":  "File uploaded successfully",
+		"filename": filename,
+	})
 }
 
 // createUploadDir ensures the upload directory exists, creating it if necessary.
